# pokemon-shakespeare

./: .gitignore  .travis.yml  Dockerfile  Makefile  NOTES.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test-and-docker-build.yml  test.yml
src/: app.py  pokemon_client.py  pokemon_shakespeare_description.py  shakespeare_client.py  test_app.py
src/fixtures/: __init__.py  fixtures.py
src/services/pokemon/: __init__.py  client.py  error.py  fixtures.py  models.py  test_pokemon.py
src/services/shakespeare/: __init__.py  client.py  error.py  fixtures.py  models.py  test_shakespeare.py
src/utils/: __init__.py  api_error.py  english_description.py  test_english_description.py
test/: test_hello.py
